- Fix for z-index of typeahead. - Added jsonObjects behaviour to the tokenizer class.

--- a/scss/components/_typeahead.scss
+++ b/scss/components/_typeahead.scss
@@ -9,7 +9,7 @@
     padding: 10px 1px;
     position: absolute;
     width: 300px;
-    z-index: 4;
+    z-index: 999;
 
     &--open {
         display: block;
